# epitech-wolf3d-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
maps/: empty_square_10.w3d  huge_map.w3d  square_10.w3d
src/: Animation.cpp  Animation.hpp  Camera.hpp  Enemy.cpp  Enemy.hpp  GameManager.hpp  Grid.cpp  Grid.hpp  Hud.hpp  MouseAndKeyboard.cpp  MouseAndKeyboard.hpp  PathFinder.cpp  PathFinder.hpp  Pickup.cpp  Pickup.hpp  Player.cpp  Player.hpp  SpriteSetting.hpp  TextureManager.hpp  Tile.hpp  Timer.hpp  Weapon.cpp  Weapon.hpp  draw.cpp  draw.hpp  file_parser.cpp  file_parser.hpp  game_loop.cpp  game_loop.hpp  lines.cpp  lines.hpp  main.cpp  movement.cpp  movement.hpp  my_math.cpp  my_math.hpp  player.cpp  player.hpp  raycasting.cpp  raycasting.hpp
src/managers/: GameManager.cpp  GameManager.hpp  SoundManager.hpp  TextureManager.hpp
